# sztcmh-mri-kidney-metrics

./: .gitignore  2023_10.rar  3757.rar  ConvNII_Widget.py  FileFetch_Widget.py  PixelCalculater_Widget.py  README.md  Rename_Widget.py  cal.py  cal_use.py  environment_info.json  fetch1.py  fetch2.py  fetch3.py  main.py  main.spec  pyproject.toml  result.xlsx  result094.xlsx  result0941.xlsx  result三.xlsx  result全.xlsx  vMRE-sADC.py  vMREsADC_Widget.py  测试.py
docs/superpowers/plans/: 2026-05-20-v1-refactor.md
docs/superpowers/specs/: 2026-05-20-v1-refactor-design.md
scripts/: validate_dwi_test.py
src/sztcmh_mri_kidney_metrics/app/: main.py  main_window.py
src/sztcmh_mri_kidney_metrics/domain/: kidney_metrics.py  vmre_sadc.py
src/sztcmh_mri_kidney_metrics/models/: metrics.py  vmre.py
src/sztcmh_mri_kidney_metrics/services/: export_service.py  file_extraction.py  metric_workflows.py  nifti_conversion.py  rename_service.py  vmre_workflows.py
src/sztcmh_mri_kidney_metrics/ui/: file_extraction_widget.py  kidney_metrics_widget.py  nifti_conversion_widget.py  rename_widget.py  shared.py  vmre_sadc_widget.py
tests/unit/: test_export_service.py  test_file_extraction.py  test_kidney_metrics.py  test_metric_workflows.py  test_rename_service.py  test_vmre_sadc.py
